Bug 472953 - Freedesktop theme is named Default, which get confused with Plasma's default theme
Summary: Freedesktop theme is named Default, which get confused with Plasma's default ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_soundtheme (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-08-03 12:20 UTC by Patrick Silva
Modified: 2023-08-03 23:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 6
Sentry Crash Report:


Attachments
screenshot (212.09 KB, image/png)
2023-08-03 12:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-08-03 12:20:49 UTC
Created attachment 160703 [details]
screenshot

STEPS TO REPRODUCE
1. open System Sounds KCM
2. make sure the Default sound theme is in use
3. 

OBSERVED RESULT
System Sounds is marked with the orange dot even if the default theme is in use. Please see the attached screenshot.

EXPECTED RESULT
System Sounds KCM should be marked with the orange dot only if a non-default theme is in use

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Ismael Asensio 2023-08-03 19:01:46 UTC
The behavior is correct and intentional, as the default theme for Plasma is (currently) oxygen. That is the theme the system will use when the user has not made a selection.

The theme named "Default" is the "freedesktop" theme, which acts as the spec fallback. It is equivalent to "hicolor" for icon themes. And it doesn't provide many sounds that we want to use. For instance, applications that install their own custom sounds will do so into that theme.
The name and description (none in this case) is provided by the theme itself, which we don't provide.

However, the report is legit, since this distinction is confusing and shouldn't be.  

We should probably to modify the name and description for the "freedesktop" theme so we avoid the confusion. This has the added benefit that we'll gain translations from our infrastructure which the current theme don't provide.
Comment 2 Bug Janitor Service 2023-08-03 22:10:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3154
Comment 3 Ismael Asensio 2023-08-03 23:20:12 UTC
Git commit 8f094602277b1534e18c1cfd7b1b63e0bdec29d4 by Ismael Asensio.
Committed on 04/08/2023 at 00:04.
Pushed by iasensio into branch 'master'.

kcms/soundtheme: Provide better info for the "freedesktop" theme

The "freedesktop" theme is the fallback sound theme according to
the specification. It is equivalent to "hicolor" for icon themes.

However, it declares itself just as "Default", with no description.
Users can find this name confusing, and mistake it with the system's
default theme, so let's give it a better Name and Comment in our UI.

As a bonus we'll gain translations from our infrastructure which
the current theme doesn't provide.
FIXED-IN: 6

M  +10   -2    kcms/soundtheme/kcm_soundtheme.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8f094602277b1534e18c1cfd7b1b63e0bdec29d4